Updated SonarCloud configurations

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=EOLangVSCode_eo-vscode
 sonar.organization=eolangvscode
 
+sonar.exclusions=client/out/**,server/out/**,server/src/parser/**
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=eo-vscode
 #sonar.projectVersion=1.0
