--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
 		"eslint": "^8.13.0",
 		"js-yaml": "^4.1.0",
 		"mocha": "^9.2.1",
-		"typescript": "^4.8.4"
+		"typescript": "^4.8.4",
+		"vsce": "^2.13.0"
 	}
 }
