--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
 		"vscode-languageserver-textdocument": "^1.0.4"
 	},
 	"scripts": {
-		"antlr4ts": "antlr4ts -visitor resources/Program.g4 && mv resources/*.ts src/parser"
+		"get-grammar": "curl https://raw.githubusercontent.com/objectionary/eo/master/eo-parser/src/main/antlr4/org/eolang/parser/Program.g4 > resources/Program.g4",
+		"build-parser": "antlr4ts -visitor resources/Program.g4 && mv resources/*.ts src/parser"
 	},
 	"devDependencies": {
 		"@types/vscode": "^1.63.0",
