--- a/.rultor.yml
+++ b/.rultor.yml
@@ -2,9 +2,10 @@ docker:
   image: yegor256/rultor-image:1.9.1
 assets:
   pat.txt: EOLangVSCode/secrets#azure-devops-pat.txt
-install: |
+install: |-
   curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.2/install.sh | bash
   source ~/.bashrc
+  command -v nvm
   nvm install 16
   npm install -g vsce
 release:
@@ -12,7 +13,7 @@ release:
     - EduardoFernandes1410
     - Anatolay
     - whutao
-  script: |
+  script: |-
     [[ "${tag}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || exit -1
     npm version ${tag}
     git commit -am "${tag}"
