--- a/.rultor.yml
+++ b/.rultor.yml
@@ -2,17 +2,13 @@ docker:
   image: yegor256/rultor-image:1.13.0
 assets:
   pat.txt: EOLangVSCode/secrets#azure-devops-pat.txt
-install: |-
+install: |
   curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.2/install.sh | bash
   source ~/.bashrc
   command -v nvm
   nvm install 16
   npm install -g vsce
 release:
-  commanders:
-    - EduardoFernandes1410
-    - Anatolay
-    - whutao
   script: |-
     [[ "${tag}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || exit -1
     npm version ${tag}
