--- a/.rultor.yml
+++ b/.rultor.yml
@@ -14,7 +14,8 @@ release:
   script: |-
     [[ "${tag}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || exit -1
     npm version ${tag}
-    git commit -am "${tag}"
+    npm install
+    npm run postinstall
     cd server && npm run get-grammar && npm run build-parser && cd ..
     npm run convert-yaml && npm run vscode:prepublish
     cat ../pat.txt | vsce login eolang
