#11 Added GHA on edited PR

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
       - master
       - development
   pull_request:
-    types: [opened, reopened]
+    types: [opened, reopened, edited]
     branches:
       - master
       - development
