Added a npm action to fetch and build the grammar

--- a/.rultor.yml
+++ b/.rultor.yml
@@ -15,7 +15,7 @@ release:
     [[ "${tag}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || exit -1
     npm version ${tag} --no-git-tag-version
     npm install
-    cd server && npm run get-grammar && npm run build-parser && cd ..
+    npm run fetch-and-build-grammar
     npm run convert-yaml && npm run vscode:prepublish
     cat ../pat.txt | vsce login eolang
     vsce publish
