--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,10 @@
 	"references": [
 		{ "path": "./client" },
 		{ "path": "./server" }
-	]
+	],
+    "typedocOptions": {
+        "entryPoints": ["server/src/*.ts", "client/src/*.ts"],
+		"exclude": ["server/src/parser/*.ts", "**/test/*"],
+        "out": "docs"
+    }
 }
