--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=EOLangVSCode_eo-vscode
 sonar.organization=eolangvscode
 
-sonar.exclusions=client/out/**,server/out/**,server/src/parser/**
+sonar.exclusions=client/out/**,server/out/**,server/src/parser/**,docs/**
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=eo-vscode
