#36 Added new rules to eslinter and adhered to it

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,7 @@
 node_modules/**
 client/node_modules/**
 client/out/**
+client/src/test/**
 server/node_modules/**
 server/out/**
 server/src/parser/**
