--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,7 +5,11 @@
         "lib": ["es2020"],
         "outDir": "out",
         "rootDir": "src",
-        "sourceMap": true
+        "sourceMap": true,
+        "typeRoots": [
+            "overrides",
+            "./node_modules/@types"
+        ]
     },
     "include": ["src"],
     "exclude": ["node_modules", ".vscode-test"]
