#27 Unit tests added with coverage report

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,10 +8,7 @@
         "strict": true,
         "outDir": "out",
         "rootDir": "src",
-        "typeRoots": [
-            "overrides",
-            "./node_modules/@types"
-        ]
+        "skipLibCheck": true
     },
     "include": ["src"],
     "exclude": ["node_modules", ".vscode-test"]
