--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "jest": "^29.3.1",
     "js-yaml": "^4.1.0",
     "mocha": "^9.2.1",
+    "ts-node": "^10.9.1",
     "typedoc": "^0.23.21",
     "typescript": "^4.8.4",
     "vsce": "^2.13.0"
