#27 Included tests in GHActions and rultor

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,14 @@ jobs:
         run: |
           npm run lint
 
+      - name: Unit testing
+        run: |
+          npm run unit-test
+
+      - name: End-to-end testing
+        run: |
+          npm run end-to-end-test
+
       - name: Download and Build Grammar
         run: |
           npm run fetch-and-build-grammar
