--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
     "fetch-and-build-grammar": "cd server && npm run get-grammar && npm run build-parser && cd ..",
     "convert-yaml": "npx js-yaml syntaxes/eo.tmLanguage.yaml > syntaxes/eo.tmLanguage.json",
-    "unit-test": "jest",
+    "unit-test": "bash scripts/setTestFixture.sh && jest",
     "end-to-end-test": "sh ./scripts/e2e.sh",
     "generate-docs": "npx typedoc"
   },
