--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,8 @@ sonar.organization=eolangvscode
 
 sonar.exclusions=client/out/**,server/out/**,server/src/parser/**,docs/**
 
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=eo-vscode
 #sonar.projectVersion=1.0
