--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=eolangvscode
 
 sonar.exclusions=client/out/**,server/out/**,server/src/parser/**,docs/**
 
-sonar.coverage.exclusions=client/src/end-to-end-test,server/src/test/**,babel.config.js
+sonar.coverage.exclusions=client/src/end-to-end-test/**,server/src/test/**,babel.config.js
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
