--- a/.rultor.yml
+++ b/.rultor.yml
@@ -17,6 +17,6 @@ release:
       npm install
       npm run fetch-and-build-grammar
       npm run convert-yaml && npm run vscode:prepublish
-      npm run unit-test
+      npm run unit-test -- --silent
       cat ../pat.txt | vsce login eolang
       vsce publish
