--- a/.github/workflows/copyrights.yml
+++ b/.github/workflows/copyrights.yml
@@ -17,25 +17,14 @@
 # SOFTWARE.
 ---
 # yamllint disable rule:line-length
-docker:
-    image: yegor256/rultor-image:1.13.0
-assets:
-    pat.txt: yegor256/objectionary-secrets#azure-devops-pat.txt
-install: |
-    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.2/install.sh | bash
-    source ~/.bashrc
-    export NVM_DIR="$HOME/.nvm"
-    [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-    [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
-    nvm install 16
-    npm install -g vsce
-release:
-    script: |-
-      [[ "${tag}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || exit -1
-      npm version ${tag} --no-git-tag-version
-      npm install
-      npm run fetch-and-build-grammar
-      npm run convert-yaml && npm run vscode:prepublish
-      npm run unit-test -- --silent
-      cat ../pat.txt | vsce login eolang
-      vsce publish
+name: copyrights
+'on':
+  push:
+  pull_request:
+jobs:
+  copyrights:
+    timeout-minutes: 15
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: yegor256/copyrights-action@0.0.8
