--- a/.github/typos.toml
+++ b/.github/typos.toml
@@ -16,21 +16,11 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 ---
-# yamllint disable rule:line-length
-name: typos
-'on':
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
-jobs:
-  typos:
-    timeout-minutes: 15
-    runs-on: ubuntu-24.04
-    steps:
-      - uses: actions/checkout@v4
-      - uses: crate-ci/typos@v1.32.0
-        with:
-          config: ./.github/typos.toml
+
+[default]
+extend-ignore-identifiers-re = [
+  "ful",       	# false positive
+  "ue",       	# false positive
+  "ative",		# false positive
+  "ment"		# false positive
+]
