#67 Add copyright and licensing information to each file

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: Copyright (c) 2021-2025 Objectionary.com
+# SPDX-License-Identifier: MIT
+
 node_modules/**
 client/node_modules/**
 client/out/**
