#67 Add docs/** to ignore pattern in copyrights-actions
Docs generated with typedoc.

--- a/.github/workflows/copyrights.yml
+++ b/.github/workflows/copyrights.yml
@@ -13,3 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: yegor256/copyrights-action@0.0.8
+        with:
+          ignore: >-
+            target/**
+            node_modules/**/*.js
+            docs/**
+
