--- a/syntaxes/eo.tmLanguage.yaml
+++ b/syntaxes/eo.tmLanguage.yaml
@@ -1,6 +1,7 @@
 # SPDX-FileCopyrightText: Copyright (c) 2021-2025 Objectionary.com
 # SPDX-License-Identifier: MIT
 ---
+# yamllint disable rule:line-length
 $schema: https://raw.githubusercontent.com/martinring/tmlanguage/master/tmlanguage.json
 scopeName: source.eo
 name: EO
