--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
         "vscode-languageserver-textdocument": "^1.0.4"
     },
     "scripts": {
-        "get-grammar": "curl https://raw.githubusercontent.com/objectionary/eo/master/eo-parser/src/main/antlr4/org/eolang/parser/Program.g4 > resources/Program.g4",
+        "get-grammar": "curl https://raw.githubusercontent.com/objectionary/eo/refs/tags/0.58.6/eo-parser/src/main/antlr4/org/eolang/parser/Eo.g4 > resources/Eo.g4",
         "build-parser": "antlr4ts -visitor resources/Program.g4 && mv resources/*.ts src/parser"
     },
     "devDependencies": {
