#67 Fix errors and warnings from yamllint

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@
 ---
 # yamllint disable rule:line-length
 name: Build
+# False positive
+# yamllint disable-line rule:truthy
 on:
   push:
     branches:
