--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: Copyright (c) 2021-2025 Objectionary.com
+# SPDX-License-Identifier: MIT
+
 [submodule "server"]
 	path = server
 	url = https://github.com/objectionary/eo-lsp-server.git
