--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "vscode": "^1.63.0"
     },
     "dependencies": {
+        "eo-lsp-server": "^0.3.0",
         "vscode-languageclient": "^7.0.0"
     },
     "devDependencies": {
