--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     ]
   },
   "dependencies": {
+    "@vscode/vsce": "^3.6.2",
     "eo-lsp-server": "^0.3.0",
     "vscode-languageclient": "^9.0.0"
   },
@@ -80,8 +81,7 @@
     "mocha": "^11.0.0",
     "ts-node": "^10.9.1",
     "typedoc": "^0.28.0",
-    "typescript": "^5.0.0",
-    "vsce": "^2.13.0"
+    "typescript": "^5.0.0"
   },
   "displayName": "EO",
   "engines": {
