--- a/.github/typos.toml
+++ b/.github/typos.toml
@@ -2,9 +2,4 @@
 # SPDX-License-Identifier: MIT
 
 [default]
-extend-ignore-identifiers-re = [
-  "ful",       	# false positive
-  "ue",       	# false positive
-  "ative",		# false positive
-  "ment"		# false positive
-]
+extend-ignore-identifiers-re = []
