fix(#102): remove js-yaml from dev-deps
Remove convert-yaml from workflow

--- a/.rultor.yml
+++ b/.rultor.yml
@@ -19,10 +19,10 @@ release:
         [[ "${tag}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || exit -1
         npm version ${tag} --no-git-tag-version
         npm install
-        npm run convert-yaml && npm run vscode:prepublish
+        npm run vscode:prepublish
         cat ../pat.txt | vsce login eolang
         vsce publish
 merge:
     script: |-
         npm install
-        npm run convert-yaml && npm run vscode:prepublish
+        npm run vscode:prepublish
