chore(#101): return typedoc to workflow
Using typedoc to generate docs. Not push generated docs to repo.

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -25,6 +25,7 @@ path = [
     "**/*.vm",
     "**/CNAME",
     "**/Gemfile.lock",
+    "docs/**",
     "README.md",
     "renovate.json",
     "testFixture/**",
