--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,10 @@ jobs:
         run: |
           npm run lint
 
+      - name: Generate Documentation
+        run: |
+          npm run generate-docs
+
       - name: Pre-publish routine
         run: |
           npm run convert-yaml
