--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^22.0.0",
+    "@types/plist": "^3.0.5",
     "@types/vscode": "^1.63.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
@@ -80,6 +81,7 @@
     "jest": "^30.0.0",
     "js-yaml": "^4.1.0",
     "mocha": "^11.0.0",
+    "plist": "^3.1.0",
     "ts-node": "^10.9.1",
     "typedoc": "^0.28.0",
     "typescript": "^5.0.0"
