--- a/.rultor.yml
+++ b/.rultor.yml
@@ -12,17 +12,17 @@ install: |
     export NVM_DIR="$HOME/.nvm"
     [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
     [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
-    nvm install 16
-    npm install -g vsce
+    nvm install 18
+    npm install -g @vscode/vsce
 release:
     script: |-
         [[ "${tag}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || exit -1
         npm version ${tag} --no-git-tag-version
         npm install
-        npm run convert-yaml && npm run vscode:prepublish
+        npm run vscode:prepublish && npm run get-grammar
         cat ../pat.txt | vsce login eolang
         vsce publish
 merge:
     script: |-
         npm install
-        npm run convert-yaml && npm run vscode:prepublish
+        npm run vscode:prepublish && npm run get-grammar
