feat(108): remove the e2e.sh script
Update the end-to-end-test script in package.json to directly execute the test runner

--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
   "scripts": {
     "compile": "tsc -b",
     "get-grammar": "sh ./scripts/get-grammar.sh",
-    "end-to-end-test": "sh ./scripts/e2e.sh",
+    "end-to-end-test": "npm run compile && node ./out/end-to-end-test/runTest",
     "test": "npx jest --coverage",
     "generate-docs": "npx typedoc",
     "lint": "eslint ./src --ext .ts,.tsx",
