feat(#109): enable end-to-end tests in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,10 @@ jobs:
         run: |
           npm run test
 
+      - name: Run end-to-end tests
+        run: |
+          xvfb-run -a npm run end-to-end-test
+
       - name: Generate Documentation
         run: |
           npm run generate-docs
